<resources>
    <string name="app_name">Tanah Ku</string>
    <string name="beranda">Beranda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tanah_ku">Tanah ku</string>
    <string name="map">Map</string>
    <string name="data_windspeed_sensor">Data Windspeed Sensor</string>
    <string name="data_soil_moisture">Data Soil Moisture</string>
    <string name="data_humid_sensor">Data Humid Sensor</string>
    <string name="air_temperature_sensor">Air Temperature Sensor</string>
    <string name="rainfall_intensity">Rainfall Intensity</string>
    <string name="soil_ph_sensor">Soil Ph Sensor</string>
    <string name="solar_radiation_sensor">Solar Radiation Sensor</string>
    <string name="location">Location</string>
    <string name="full_location_addreess">full location addreess</string>
    <string name="lihat_daftar_lokasi">  Lihat daftar Lokasi</string>
    <string name="image_logo">Image Logo</string>
    <string name="about">About</string>
    <string name="splash">Splash</string>
</resources>