<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarr"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?bgToolbar"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/windLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_item_list_device"
            android:layout_margin="16dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarr">

            <TextView
                android:id="@+id/windSpeedTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/data_windspeed_sensor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/windGraphView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:paddingBottom="20dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/soilLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_item_list_device"
            android:layout_margin="16dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/windLayout"
            app:layout_constraintStart_toStartOf="@id/windLayout"
            app:layout_constraintTop_toBottomOf="@id/windLayout">

            <TextView
                android:id="@+id/soilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/data_soil_moisture"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/soilGraph"
                android:layout_width="match_parent"
                android:layout_height="400dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/humidLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_item_list_device"
            android:layout_margin="16dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/soilLayout"
            app:layout_constraintStart_toStartOf="@id/soilLayout"
            app:layout_constraintTop_toBottomOf="@id/soilLayout">

            <TextView
                android:id="@+id/humidTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/data_humid_sensor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/humidGraph"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/airtempLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_item_list_device"
            android:layout_margin="16dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/humidLayout"
            app:layout_constraintStart_toStartOf="@id/humidLayout"
            app:layout_constraintTop_toBottomOf="@id/humidLayout">

            <TextView
                android:id="@+id/airtempTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/air_temperature_sensor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/airtempGraph"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/rainfallLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_item_list_device"
            android:layout_margin="16dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/airtempLayout"
            app:layout_constraintStart_toStartOf="@id/airtempLayout"
            app:layout_constraintTop_toBottomOf="@id/airtempLayout">

            <TextView
                android:id="@+id/rainfallTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/rainfall_intensity"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/rainfallGraph"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/soilphLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_item_list_device"
            android:layout_margin="16dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/rainfallLayout"
            app:layout_constraintStart_toStartOf="@id/rainfallLayout"
            app:layout_constraintTop_toBottomOf="@id/rainfallLayout">

            <TextView
                android:id="@+id/soilphTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/soil_ph_sensor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/soilphGraph"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/solarradiationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_item_list_device"
            android:layout_margin="16dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/soilphLayout"
            app:layout_constraintStart_toStartOf="@id/soilphLayout"
            app:layout_constraintTop_toBottomOf="@id/soilphLayout">

            <TextView
                android:id="@+id/solarradiationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/solar_radiation_sensor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/solarradiationGraph"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>